--- a/static/styles/management/users/users.css
+++ b/static/styles/management/users/users.css
@@ -6,6 +6,7 @@
     column-gap: 0.5rem;
     height: 100%;
     width: 100%;
+    overflow-y: auto;
 }
 
 .user {
@@ -21,9 +22,16 @@
     justify-content: space-between;
     height: 100%;
     width: 100%;
-    padding: 12px;
+    padding: 10px;
     color: var(--text);
     text-decoration: none;
+    border: solid 2px transparent;
+    border-radius: var(--border-radius);
+    transition: border 0.1s ease-in-out;
+    
+    &:hover {
+        border: solid 2px var(--primary);
+    }
 }
 
 .user__top {
