--- a/templates/management/menus/menu_base.html
+++ b/templates/management/menus/menu_base.html
@@ -20,8 +20,8 @@
     {% call sidebar(header='Меню') %}
     <nav class="management-nav">
         <ul class="management-nav__list">
-            <li><a href="/manage/menu">Список</a></li>
-            <li><a href="/manage/menu/add">Добавить</a></li>
+            <li><a href="/manage/menus">Список</a></li>
+            <li><a href="/manage/menus/add">Добавить</a></li>
         </ul>
     </nav>
     {% endcall %}
