--- a/templates/management/users/add.html
+++ b/templates/management/users/add.html
@@ -10,13 +10,13 @@
 {% block head %}
     {{ super() }}
     <link rel="stylesheet" href="/static/styles/macros/labeled-input.css">
-    <link rel="stylesheet" href="/static/styles/management/add_user.css">
+    <link rel="stylesheet" href="/static/styles/management/users/add_user.css">
 {% endblock %}
 
 
 {% block top_bar %}
     {{ super() }}
-    <button id="add-user-btn" form="add-user-form" class="add-user-btn accent">Добавить</button>
+    <button id="add-user-btn" form="add-user-form" class="add-btn accent">Добавить</button>
 {% endblock %}
 
 
