--- a/templates/management/menus/add.html
+++ b/templates/management/menus/add.html
@@ -10,13 +10,14 @@
 {% block head %}    
     {{ super() }}
     <link rel="stylesheet" href="/static/styles/macros/labeled-input.css">
+    <link rel="stylesheet" href="/static/styles/management/adding-styles.css">
     <link rel="stylesheet" href="/static/styles/management/menu/add-menu.css">
 {% endblock %}
 
 
 {% block top_bar %}
     {{ super() }}
-    <button id="add-menu-btn" form="add-menu-form" class="add-menu-btn accent">Добавить</button>
+    <button id="add-menu-btn" form="add-menu-form" class="add-btn accent">Добавить</button>
 {% endblock %}
 
 
@@ -24,20 +25,25 @@
     <div class="form-wrapper">
         <form id="add-menu-form" class="add-menu-form" method="post">
 
-            <div class="type">
-                <h2>Тип</h2>
-                {{ labeled_select([('breakfast', 'Завтрак'), ('lunch', 'Обед')], name='type') }}
-            </div>
+            <section class="form__section">
+                <h2 class="section__header">Основное</h2>
+
+                <div class="section__content">
+                    {{ labeled_select([('breakfast', 'Завтрак'), ('lunch', 'Обед')], label='Тип', name='type', required=True) }}
+                </div>
+
+            </section>
 
 
+            <section class="form__section">
+                <h2 class="section__header">Состав</h2>
 
-            
-            <div class="composition">
-                <h2>Состав</h2>
-                {% for category in categories.keys() %}
-                {{ labeled_select(options=categories[category], name=category, label=category) }}
-                {% endfor %}
-            </div>
+                <div class="section__content">
+                    {% for category in categories.keys() %}
+                    {{ labeled_select(options=[('', '...')] + categories[category], name=category, label=category) }}
+                    {% endfor %}
+                </div>
+            </section>
             
 
         </form>
