--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -31,7 +31,7 @@
             <input id="login" name="login" placeholder="Логин" value="{{ login }}" required>
         </div>
 
-        {% if role != "student" %}
+        {% if role != "user" %}
             <div>
                 <label for="role">Роль</label>
                 <select id="role" name="role" required>
