--- a/templates/admin_menu.html
+++ b/templates/admin_menu.html
@@ -28,6 +28,7 @@
 
     <button onclick="document.location.href='/add_menu'">Создать меню</button>
     <button onclick="document.location.href='/admin_read_dish'">Смотреть список блюд</button>
+    <button onclick="document.location.href='/admin_read_product'">Смотреть список продуктов</button>
 
     <button onclick="document.location.href='/admin_requisition'">Согласование заявок</button>
     <button onclick="document.location.href='/add_user'">Добавить пользователя</button>
