--- a/templates/management/menus/view.html
+++ b/templates/management/menus/view.html
@@ -18,7 +18,7 @@
                 <a href="menus/{{ menu.id }}" class="menu__link">
 
                     <div class="menu__top">
-                        <h2 class="menu__header">{{ menu.date.strftime('%-d.%m.%Y') }} | 
+                        <h2 class="menu__header">{{ menu.date | date_Y_M_d }} | 
                             <span class="menu__type">
                                 {% if menu.type == 'breakfast' %}
                                     Завтрак
