--- a/static/styles/menu.css
+++ b/static/styles/menu.css
@@ -1,5 +1,22 @@
+.top-bar__left, .top-bar__right {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.price {
+    margin-left: 8px;
+    color: var(--primary);
+    font-size: 2rem;
+    font-weight: 600;
+}
+
 .menu-type {
     font-size: 1.25rem;
+}
+
+.buy-menu-btn {
+    font-size: 1.1rem;
 }
 
 .days-list {
@@ -59,40 +76,4 @@ main {
     width: 100%;
     overflow-y: auto;
     scroll-behavior: smooth;
-}
-
-.menu-grid__item {
-    box-sizing: border-box;
-    background: var(--bg);
-    border: solid 2px transparent;
-    border-radius: var(--border-radius);
-    box-shadow: var(--shadow);
-    overflow: hidden;
-    transition: border 0.1s ease-in-out;
-
-    &:hover {
-        border: solid 2px var(--primary);
-    }
-
-}
-
-.dish__link {
-    display: block;
-    padding: 8px 12px;
-    color: var(--text);
-    text-decoration: none;
-}
-
-.dish__name {
-    font-size: 1.25rem;
-    font-weight: 600;
-}
-
-.dish__composition {
-    margin: 0;
-    padding-left: 20px;
-}
-
-.dish__composition li {
-    color: var(--text-muted)
 }
