Плитка меню вынесена в макрос

--- a/templates/management/menus/view.html
+++ b/templates/management/menus/view.html
@@ -1,43 +1,21 @@
 {% extends 'management/menus/menu_base.html' %}
 
+{% from 'macros/tiles/menu_tile.html' import menu_tile   %}
 
 {% block title %}Список меню{% endblock %}
 
 
 {% block head %}
     {{ super() }}
-    <link rel="stylesheet" href="/static/styles/management/menu/menu.css">
+    <link rel="stylesheet" href="/static/styles/management/menus/menus.css">
+    <link rel="stylesheet" href="/static/styles/macros/tiles/menu_tile.css">
 {% endblock %}
 
 
 {% block main %}
     <div class="menus-grid">
         {% for menu in menus %}
-            <div class="menu">
-                <a href="menus/{{ menu.id }}" class="menu__link">
-
-                    <div class="menu__top">
-                        <h2 class="menu__header">{{ menu.date | date_Y_M_d }} | 
-                            <span class="menu__type">
-                                {% if menu.type == 'breakfast' %}
-                                    Завтрак
-                                {% elif menu.type == 'lunch' %}
-                                    Обед
-                                {% endif %}
-                            </span>
-                        </h2>
-    
-                        <button class="menu__delete-btn danger"><img style="height: 1.25em;" src='/static/images/buttons/delete_button.svg'></button>
-                    </div>
-    
-                    <ul class="menu__info">
-                        <li>{{ menu.price }}₽</li>
-                        <li>Блюд: {{ menu.dishes|length }}</li>
-                    </ul>
-
-                </a>
-
-            </div>
+            {{ menu_tile(menu, delete_button=True) }}
         {% endfor %}
     </div>
 {% endblock %}
