--- a/templates/management/menus/menu_base.html
+++ b/templates/management/menus/menu_base.html
@@ -17,7 +17,7 @@
 
 
 {% block sidebar %}
-    {% call sidebar(header='Меню') %}
+    {% call sidebar(header='Вкладки') %}
     <nav class="management-nav">
         <ul class="management-nav__list">
             <li><a href="/manage/menus">Список</a></li>
