--- a/templates/receiving.html
+++ b/templates/receiving.html
@@ -7,7 +7,7 @@
     <title>История</title>
 </head>
 <body>
-    <h1>История операций</h1>
+    <h1>История получений</h1>
 
     <form method="POST">
         <table border="1" cellpadding="8" cellspacing="0">
