--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
         {% if current_user.is_authenticated %}
         <nav id="app-menu">
             <a href="/menu">Меню</a>
-            <a href="/food_payment">Оплата</a>
+            <a href="/payment">Оплата</a>
             <a href="/receiving">Получение</a>
             <button id="profile-btn">{{ surname }} {{ name[0] }}.</button>
         </nav>
