--- a/templates/admin_read_product.html
+++ b/templates/admin_read_product.html
@@ -9,11 +9,15 @@
 
     {% block content %}
 
-        {% for product in products %}
-            <div>{{ product.name }}</div>
-            <div>{{ product.amount }}</div>
-            <div>{{ product.measurement }}</div>
-        {% endfor %}
+        {% if products %}
+            {% for product in products %}
+                <div>{{ product.name }}</div>
+                <div>{{ product.amount }}</div>
+                <div>{{ product.measurement }}</div>
+            {% endfor %}
+        {% else %}
+            <div>Продуктов нет</div>
+        {% endif %}
 
     {% endblock content%}
 
